--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@astradio/api",
+  "name": "astradio-api",
+  "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "build:api": "tsc",
-    "dev": "nodemon src/app.ts",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -26,9 +26,7 @@
     "hpp": "^0.2.3",
     "express-mongo-sanitize": "^2.2.0",
     "xss-clean": "^0.1.4",
-    "@astradio/astro-core": "file:packages/astro-core",
-    "@astradio/audio-mappings": "file:packages/audio-mappings",
-    "@astradio/types": "file:packages/types"
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
